--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
 @import "./styles/general/root";
 @import "./styles/general/general";
 @import "./styles/blocks/blocks";
-
+@import "./styles/general/navbar";
